--- a/_config.yaml
+++ b/_config.yaml
@@ -10,8 +10,8 @@ proofer: false
 links:
   email: jiarui.ding@ubc.ca
   orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
-  github: https://github.com/Ding-Group
+  google-scholar: AtFiBlgAAAAJ
+  github: Ding-Group
   twitter: Ding-GroupDESCRIPTION=An engaging 1-3 sentence description of your lab.
   youtube: Ding-GroupDESCRIPTION=An engaging 1-3 sentence description of your lab.
 
