Updated background and _config

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 title: Computational Biology Group @ UBC
 subtitle: 
 description: 
-header: images/background.jpg
+header: images/background.png
 footer: images/background.jpg
 proofer: false
 
